# utf8char

./: Cargo.toml  README.md  checklist.md
.cargo/: config.toml
benches/: default.rs
src/: charapi.rs  iter.rs  lib.rs  representation.rs  std_at_home.rs  tests.rs
src/representation/: enums.rs  utf8contbyte.py  utf8firstbyte.py
