[package]
name = "utf8char"
version = "0.2.0"
edition = "2021"
keywords = ["unicode", "utf8", "char", "string"]
categories = ["no-std", "no-std::no-alloc", "data-structures"]
homepage = "https://github.com/unicode-entropy/utf8char"
repository = "https://github.com/unicode-entropy/utf8char"
description = "A crate that supplies a utf8 encoded char"
readme = "README.md"
license = "MPL-2.0"
rust-version = "1.82"

[features]
tests_total_ordering = []

[[bench]]
harness = false
name = "default"

[dev-dependencies]
criterion = "0.5"
encode_unicode = "1.0.0"
itertools = "0.13.0"
rayon = "1.10.0"

[dependencies]

[profile.dev]
opt-level = 1
